--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <modules>
     <module>mybatis-01</module>
       <module>Mybatis-02</module>
+      <module>Mybatis-03</module>
   </modules>
   <dependencies>
     <dependency>
