--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <module>mybatis-01</module>
       <module>Mybatis-02</module>
       <module>Mybatis-03</module>
+      <module>Mybatis-04</module>
+      <module>Mybatis-05</module>
   </modules>
   <dependencies>
     <dependency>
@@ -35,6 +37,8 @@
       <version>1.18.26</version>
       <scope>provided</scope>
     </dependency>
+
+
   </dependencies>
 
   <build>
