--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
       <module>Mybatis-03</module>
       <module>Mybatis-04</module>
       <module>Mybatis-05</module>
+    <module>Mybatis-06</module>
   </modules>
   <dependencies>
     <dependency>
