--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
       <module>Mybatis-04</module>
       <module>Mybatis-05</module>
     <module>Mybatis-06</module>
+      <module>Mybatis-07</module>
   </modules>
   <dependencies>
     <dependency>
